# fe_architecture_harness

./: README.md  pyproject.toml
docs/: harness-flow.drawio  harness-narrative-flow.drawio  harness-reference-table.drawio  harness-userflow-hitl.drawio  observability-report.md
examples/: recruitment-platform.brief.yaml
src/frontforge/: __init__.py  cli.py
src/frontforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/frontforge/agents/: base.py
src/frontforge/agents/business_analysis/: agent.py
src/frontforge/agents/clarification/: agent.py
src/frontforge/config/: models.py  stages.py  verification.py
src/frontforge/core/: human_review.py  lock.py  logger.py  orchestrator.py  session.py  state_store.py  stats.py  tracing.py
src/frontforge/prompts/: builder.py
src/frontforge/providers/: base.py  claude_cli.py  gemini_provider.py  openai_provider.py
src/frontforge/shared/: constants.py  types.py  utils.py
src/frontforge/tools/: figma_tool.py  filesystem_tool.py  git_tool.py  mcp_tool.py  parser_tool.py  terminal_tool.py
tests/integration/: test_claude_cli_smoke.py
tests/unit/: conftest.py  fixtures_data.py  test_claude_cli_provider.py  test_cli_formatting.py  test_codegen_batching.py  test_design_analysis_agent.py  test_event_logger.py  test_figma_tool.py  test_human_review.py  test_lock.py  test_metrics.py  test_orchestrator.py  test_prompt_builder.py  test_security_verifier.py  test_state_store.py  test_stats.py  test_tracing.py  test_utils.py  test_verification_engine.py
(+53 files in other folders)
