[project]
name = "frontforge"
version = "0.1.0"
description = "AI UI-Architecture Harness — DAG-orchestrated agents that turn a raw requirement into a full frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
frontforge = "frontforge.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frontforge = ["prompts/**/*.md", "prompts/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
